swag fixes
