# internal/transport/dto/requests.go
@@ -5,17 +5,17 @@ import (
 )
 
 type User struct {
-	Id int `json:"id" validate:"required"`
+	Id int `json:"id" validate:"required,gt=0,omitempty"`
 }
 
 type RequestCreateUser struct {
 	Username string `json:"username" validate:"required,gt=0,omitempty"`
 }
 type RequestDeleteUser struct {
-	User `validate:"required"`
+	User `validate:"required,gt=0,omitempty"`
 }
 type RequestCreateSegment struct {
-	service.Segment_CreateSegment `validate:"required"`
+	service.Segment_CreateSegment `validate:"required,gt=0,omitempty" `
 }
 type RequestDeleteSegment struct {
 	service.Segment_DeleteSegment
@@ -23,15 +23,15 @@ type RequestDeleteSegment struct {
 
 type RequestAddSegmentsToUser struct {
 	User
-	Segments []*service.Segment_AddSegmentsToUser `json:"segments" validate:"required"`
+	Segments []*service.Segment_AddSegmentsToUser `json:"segments" validate:"required,gt=0,omitempty"`
 }
 type RequestDeleteSegmentsFromUser struct {
 	User
-	Segments []*service.Segment_DeleteSegmentsFromUser `json:"segments" validate:"required"`
+	Segments []*service.Segment_DeleteSegmentsFromUser `json:"segments" validate:"required,gt=0,omitempty"`
 }
 
 type RequestGetHistory struct {
 	UserID int `json:"user_id"  schema:"user_id"`
-	Month  int `json:"month" validate:"required" schema:"month"`
-	Year   int `json:"year" validate:"required" schema:"year"`
+	Month  int `json:"month" validate:"required"`
+	Year   int `json:"year" validate:"required" `
 }
